fix: qc ribbon & online
